apps/base/tools/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tools
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: IT Tools
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: sh-it-tools
    gethomepage.dev/namespace: tools
    gethomepage.dev/app: tools
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: tools
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts: []
